src/objects/Trigger_Oportunidad__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Enciende/apaga los trigger del objeto oportunidad.</description>
    <fields>
        <fullName>ADQ_ReasignaActividadesOportGogle__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Swithc ADQ_ReasignaActividadesOportGogle_cls</description>
        <label>ADQ_ReasignaActividadesOportGogle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AsignarUSAC_Oportunidad__c</fullName>
        <defaultValue>true</defaultValue>
        <label>AsignarUSAC_Oportunidad</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BPyP_ClienteImportar_cls__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Campo de verificación para BPyP_ClienteImportar_cls__c</description>
        <inlineHelpText>Si se encuentra seleccionado se ejecuta el trigger BPyP_ClienteImportar_cls__c</inlineHelpText>
        <label>BPyP_ClienteImportar_cls</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Amountformalized_cls__c</fullName>
        <defaultValue>true</defaultValue>
        <label>CF_Amountformalized_cls</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_OP_ValidacionEtapas__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enciende/apaga el trigger CF_OP_ValidacionEtapas</description>
        <inlineHelpText>Enciende/apaga el trigger CF_OP_ValidacionEtapas</inlineHelpText>
        <label>CF_OP_ValidacionEtapas</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CH_Asignar_Productos_Standar__c</fullName>
        <defaultValue>false</defaultValue>
        <description>switch trigger standar</description>
        <label>CH_Asignar_Productos_Standar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CH_OP_ValidacionEtapas__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Trigger que valida las etapas de las oportunidades de cash management.</description>
        <label>CH_OP_ValidacionEtapas</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cases__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cases</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContarOppsGrupo__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Switch ContarOppsGrupo</description>
        <label>ContarOppsGrupo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EG009_AC_FinanciamientoPipeline_cls__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Checkbox encargado de desactivar/activar el Trigger: EG009_AC_FinanciamientoPipeline_cls</description>
        <inlineHelpText>Al activar este checkbox se activa la funcionalidad del trigger EG009_AC_FinanciamientoPipeline_cls del proyecto financiamiento pipeline.</inlineHelpText>
        <label>EG009_AC_FinanciamientoPipeline_cls</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ENGMX_CalificacionOli_cls__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enciende/apaga el trigger ENGMX_CalificacionOli_cls</description>
        <inlineHelpText>Enciende/apaga el trigger ENGMX_CalificacionOli_cls</inlineHelpText>
        <label>ENGMX_CalificacionOli_cls</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HI001_PushNotificationsOpp__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Siwthc validacion</description>
        <label>HI001_PushNotificationsOpp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HI_OP_StageLoad__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Encience/apaga el trigger HI_OP_StageLoad</description>
        <inlineHelpText>Encience/apaga el trigger HI_OP_StageLoad</inlineHelpText>
        <label>HI_OP_StageLoad</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OPFI001_Incidencias__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Swithc de encendido y apagado</description>
        <inlineHelpText>Encendido / apagado</inlineHelpText>
        <label>OPFI001_Incidencias</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Service__c</fullName>
        <defaultValue>true</defaultValue>
        <description>swithc Opportunity_Service</description>
        <label>Opportunity_Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TriggerOportunidad_Master__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enciende/Apaga todos los trigger del objeto Opportunty.</description>
        <inlineHelpText>Enciende/Apaga todos los trigger del objeto Opportunty.</inlineHelpText>
        <label>TriggerOportunidad_Master</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_tgr__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Switch de validacion del trigger User_tgr</description>
        <inlineHelpText>Encendido o apgado</inlineHelpText>
        <label>User_tgr</label>
        <type>Checkbox</type>
    </fields>
    <label>Trigger_Oportunidad</label>
</CustomObject>